6738933: assert with base pointers must match with compressed oops enabled

Reviewed-by: kvn, rasbold